# stickdeck-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  libtest_macro.rlib  stickdeck.vdf
.github/workflows/: build-and-upload-release-assets.yml  create-release.yml  linux-build-and-upload-release-assets.yml  win-build-and-upload-release-assets.yml
common/: Cargo.toml  test_serialize_deserialize.rs
common/src/: gamepad_macros.rs  lib.rs  mouse.rs  packet.rs  perf.rs
common/src/gamepad/: deserializable.rs  mod.rs  serializable.rs
common/src/gamepad_macros/: mod.rs  tests.rs
deck/: Cargo.toml  stickdeck.vdf
deck/scripts/: debug.sh  launch.sh  setup.sh
deck/src/: client.rs  config.rs  deck.rs  error.rs  gamepad.rs  input.rs  input_action.rs  main.rs  mock_gamepad.rs  perf.rs  serialize.rs  server.rs  ui.rs  utils.rs  xbox_ctrl.rs
deck/src/input/: action.rs  xbox.rs
linux/: Cargo.toml  PLAN.md
linux/scripts/: debug.sh  launch.sh  setup.sh
linux/src/: client.rs  lib.rs  main.rs
linux/src/input/: gamepad.rs  mod.rs  mouse.rs
proto/: stickdeck.proto
snippet/: deserialize.rs  serialize.rs  test_serialize_deserialize.rs
src/: action_repo.rs  all_deck_ctrl.rs  client.rs  deck.rs  input.rs  input_action.rs  model.rs  serde.rs  server.rs  ui.rs  win.rs  xbox_ctrl.rs
win/: Cargo.toml
win/scripts/: debug.bat  dev.bat  launch.bat  release.bat
win/src/: client.rs  controller.rs  deserialize.rs  gamepad.rs  main.rs  mouse.rs  server.rs  win.rs
