[package]
name = "stickdeck-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deck"
path = "src/deck.rs"

[[bin]]
name = "win"
path = "src/win.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
vigem-client = "0.1"
tokio = { version = "1", features = ["full"] }
steamworks-sys = "0.10.0"
steamworks = "0.10.0"
iced = { version = "0.10", features = ["smol"] }

[build-dependencies]
tonic-build = "0.11"
