[package]
name = "stickdeck"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "stickdeck"
path = "src/deck.rs"

[dependencies]
steamworks-sys = "0.10.0"
steamworks = "0.10.0"
iced = { version = "0.10", features = ["smol"] }
local-ip-address = "0.6.1"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
stickdeck-common = { path = "../common" }
