[package]
name = "stickdeck"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "stickdeck"
path = "src/deck.rs"

[dependencies]
steamworks-sys = "0.10.0"
steamworks = "0.10.0"
iced = { version = "0.13.1", features = ["tokio"] }
local-ip-address = "0.6.1"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
stickdeck-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33.0"
