[package]
name = "stickdeck"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stickdeck"
path = "src/deck.rs"

[dependencies]
clap = { workspace = true, features = ["cargo"] }
steamworks-sys = "0.10.0"
steamworks = "0.10.0"
iced = { version = "0.10", features = ["tokio"] }
local-ip-address = "0.6.1"
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
stickdeck-common = { workspace = true }
tokio = { version = "1", features = ["full"] }
