[package]
name = "stickdeck-win"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "stickdeck-win"
path = "src/win.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
windows = { version = "0.57.0", features = ["Win32_UI_WindowsAndMessaging"] }
vigem-client = "0.1"
stickdeck-common = { path = "../common" }
