[package]
name = "stickdeck-win"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "stickdeck-win"
path = "src/win.rs"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
windows = { version = "0.57.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
vigem-client = "0.1"
stickdeck-common = { workspace = true }
